# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "av_codec/av_codec"
MEDIA_ROOT_DIR = "//foundation/multimedia/av_codec/"

hls_test_sources = [
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/dash/dash_media_downloader.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/dash/dash_mpd_downloader.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/dash/dash_segment_downloader.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/download/downloader.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/download/network_client/http_curl_client.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/hls/hls_media_downloader.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/hls/hls_playlist_downloader.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/hls/hls_tags.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/hls/m3u8.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/hls/playlist_downloader.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/http/http_media_downloader.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/http_source_plugin.cpp",
  "$av_codec_root_dir/services/media_engine/plugins/source/http_source/utils/media_cached_buffer.cpp",
]

config("hls_unittest_cfg") {
  defines = [
    "HST_ANY_WITH_NO_RTTI",
    "MEDIA_OHOS",
    "TESTING",
  ]

  cflags = [
    "-Wno-sign-compare",
    "-fno-exceptions",
    "-fno-common",
    "-fstack-protector-all",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wdate-time",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  include_dirs = [
    "$av_codec_root_dir/interfaces",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/services/media_engine/plugins/source/http_source",
    "$av_codec_root_dir/services/media_engine/plugins/source/http_source/base64",
    "$av_codec_root_dir/services/media_engine/plugins/source/http_source/xml",
    "$av_codec_root_dir/services/media_engine/plugins/source/http_source/dash",
    "$av_codec_root_dir/services/media_engine/plugins/source/http_source/dash/include",
    "$av_codec_root_dir/services/media_engine/plugins/source/http_source/dash/include/mpd_parser",
    "$media_foundation_root_dir/src",
    "//third_party/curl/include",
    "//third_party/openssl/include",
    "$av_codec_root_dir/test/unittest/common",
  ]
}

##############################fuzztest##########################################
ohos_fuzztest("HttpSourceFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$MEDIA_ROOT_DIR/test/fuzztest/httpsource_fuzzer"
  testonly = true
  sources = hls_test_sources + [ "httpsource_fuzzer.cpp" ]

  configs = [
    ":hls_unittest_cfg",
    "$av_codec_root_dir/services/dfx:av_codec_service_log_dfx_public_config",
  ]
  deps = [
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
    "//third_party/curl:curl_shared",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "media_foundation:media_foundation",
    "netmanager_base:net_conn_manager_if",
    "safwk:system_ability_fwk",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":HttpSourceFuzzTest",
  ]
}
###############################################################################
