# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")
module_output_path = "av_codec/av_codec"
MEDIA_ROOT_DIR = "//foundation/multimedia/av_codec/"
config("hcodec_fuzztest_cfg") {
  cflags_cc= [ "-fexceptions" ]
}

##############################fuzztest##########################################
ohos_fuzztest("HwvvcdecoderServerFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$MEDIA_ROOT_DIR/test/fuzztest/hwvvcdecoderserver_fuzzer"
  include_dirs = [
    "$MEDIA_ROOT_DIR/interfaces/kits/c",
    "$MEDIA_ROOT_DIR/services/engine/codec/video/hcodec",
    "$MEDIA_ROOT_DIR/test/fuzztest/hwvvcdecoderserver_fuzzer/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  configs = [ ":hcodec_fuzztest_cfg" ]
  sources = [
    "serverdec_sample.cpp",
    "hwvvcdecoderserver_fuzzer.cpp",
  ]
  external_deps = [
    "c_utils:utils",
    "drivers_interface_codec:libcodec_proxy_4.0",
    "graphic_surface:surface",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "media_foundation:media_foundation",
    "media_foundation:native_media_core",
    "openmax:libopenmax_static",
  ]
  deps = [
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native:av_codec_client",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_codecbase",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_vdec",
    "$MEDIA_ROOT_DIR/services/engine/codec/video/hcodec:hcodec",
  ]
  defines = []
  defines += av_codec_defines
  if (build_variant != "user") {
    defines += [ "BUILD_ENG_VERSION" ]
  }
  resource_config_file =
      "$MEDIA_ROOT_DIR/test/moduletest/resources/ohos_test.xml"
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":HwvvcdecoderServerFuzzTest",  #引用测试套
  ]
}
###############################################################################
