# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")
module_output_path = "av_codec/av_codec"
MEDIA_ROOT_DIR = "//foundation/multimedia/av_codec/"

##############################fuzztest##########################################
ohos_fuzztest("Mpeg1decoderResourceFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "$MEDIA_ROOT_DIR/test/fuzztest/mpeg1decoderresource_fuzzer"
  include_dirs = [
    "$MEDIA_ROOT_DIR/interfaces/kits/c",
    "$MEDIA_ROOT_DIR/test/fuzztest/mpeg1decoderconfigure_fuzzer",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "$MEDIA_ROOT_DIR/test/fuzztest/mpeg1decoderconfigure_fuzzer/videodec_sample.cpp",
    "mpeg1decoderresource_fuzzer.cpp",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "media_foundation:native_media_core",
    "window_manager:libwm",
  ]
  deps = [
    "$MEDIA_ROOT_DIR//interfaces/kits/c:native_media_vdec",
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native:av_codec_client",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_codecbase",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:capi_packages",
  ]

  resource_config_file =
      "$MEDIA_ROOT_DIR/test/moduletest/resources/ohos_test.xml"
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":Mpeg1decoderResourceFuzzTest",
  ]
}
###############################################################################
