# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

MEDIA_ROOT_DIR = "//foundation/multimedia/av_codec/"
THIRD_ROOT_DIR = "//third_party/"
module_output_path = "av_codec/moduletest"

ohos_unittest("audio_decoder_module_test") {
  module_out_path = module_output_path
  sources = [
    "Common/src/AudioDecoderDemoCommon.cpp",
    "InnerAPI/InnerInterfaceDependCheckTest.cpp",
    "InnerAPI/InnerParamCheckTest.cpp",
    "NativeAPI/NativeInterfaceDependCheckTest.cpp",
    "NativeAPI/NativeNullCheckTest.cpp",
    "NativeAPI/NativeParamCheckTest.cpp",
  ]

  include_dirs = [
    "Common/include",
    "$MEDIA_ROOT_DIR/test/nativedemo/avmuxer",
    "$MEDIA_ROOT_DIR/interfaces/kits/c",
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native",
    "$MEDIA_ROOT_DIR/services/services/factory",
    "$MEDIA_ROOT_DIR/services/engine/plugin/common",
    "$MEDIA_ROOT_DIR/services/engine/plugin/core",
    "$MEDIA_ROOT_DIR/services/engine/plugin/interface",
    "$THIRD_ROOT_DIR/ffmpeg",
    "$MEDIA_ROOT_DIR/frameworks/native/capi/common",
    "$MEDIA_ROOT_DIR/services/dfx/include",
    "$MEDIA_ROOT_DIR/services/engine/base/include",
    "$MEDIA_ROOT_DIR/services/engine/codec/include/video",
    "$MEDIA_ROOT_DIR/services/engine/common/include",
    "$MEDIA_ROOT_DIR/services/engine/source/hst_releated",
    "$MEDIA_ROOT_DIR/services/services/factory",
    "$MEDIA_ROOT_DIR/services/utils/include",
  ]

  cflags = [
    "-Wall",
    "-fno-rtti",
    "-fno-exceptions",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
    "-Wno-deprecated-declarations",
  ]

  deps = [
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native:av_codec_client",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:capi_packages",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_avmuxer",
    "$MEDIA_ROOT_DIR/services/services:av_codec_service",
    "$THIRD_ROOT_DIR/bounds_checking_function:libsec_static",
    "$THIRD_ROOT_DIR/ffmpeg:libohosffmpeg",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "histreamer:media_foundation",
    "ipc:ipc_core",
  ]

  resource_config_file =
      "$MEDIA_ROOT_DIR/test/moduletest/resources/ohos_test.xml"
}
