# Copyright (c) 2024-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "av_codec/AVCodec_Video/unittest"

av_codec_unittest_include_dirs = [
  "$av_codec_root_dir/interfaces/inner_api/native",
  "$av_codec_root_dir/interfaces/interfaces/inner_api/native",
]

av_codec_unittest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fno-exceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-all",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-Wformat=2",
  "-Wdate-time",
  "-Dprivate=public",
  "-Dprotected=public",
]

##################################################################################################################
ohos_unittest("audio_data_source_filter_unittest") {
  sanitize = av_codec_test_sanitize
  module_out_path = module_output_path
  include_dirs = av_codec_unittest_include_dirs
  include_dirs += [
    "./",
    "./mock",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/services/engine/common/include",
    "$av_codec_root_dir/services/engine/base/include",
    "$av_codec_root_dir/services/utils/include",
    "$av_codec_root_dir/services/engine/codec/include/audio",
    "$av_codec_root_dir/services/engine/factory",
    "$av_codec_root_dir/services/media_engine/plugins/source",
    "$av_codec_root_dir/interfaces",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/services/media_engine/filters",
    "$av_codec_root_dir/services/media_engine/modules/source/audio_capture",
  ]
  defines = []
  if (defined(av_codec_support_video_processing_engine) &&
      av_codec_support_video_processing_engine) {
    defines += [ "USE_VIDEO_PROCESSING_ENGINE" ]
  }

  cflags = av_codec_unittest_cflags

  cflags_cc = cflags

  public_configs = []
  configs = [
    "$av_codec_root_dir/services/dfx:av_codec_service_log_dfx_public_config",
  ]

  if (av_codec_support_test) {
    sources = [
      "$av_codec_root_dir/services/media_engine/filters/audio_capture_filter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/audio_decoder_adapter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/audio_sink_filter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/codec_capability_adapter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/decoder_surface_filter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/demuxer_filter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/muxer_filter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/subtitle_sink_filter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/surface_decoder_adapter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/surface_decoder_filter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/surface_encoder_adapter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/surface_encoder_filter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/video_capture_filter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/video_decoder_adapter.cpp",
      "$av_codec_root_dir/services/media_engine/filters/video_resize_filter.cpp",
      "$av_codec_root_dir/services/media_engine/modules/sink/audio_sink.cpp",
      "$av_codec_root_dir/services/media_engine/modules/sink/subtitle_sink.cpp",
      "./audio_data_source_filter_unittest.cpp",
    ]
  }

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:capi_packages",
    "$av_codec_root_dir/services/engine/codec/audio:av_codec_audio_ffmpeg_codec",
    "$av_codec_root_dir/services/media_engine/filters:av_codec_media_engine_filters",
    "$av_codec_root_dir/services/media_engine/modules:av_codec_media_engine_modules",
    "$av_codec_root_dir/services/services:av_codec_service",
    "$av_codec_root_dir/services/utils:av_codec_service_utils",
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
  ]

  public_configs = []

  external_deps = [
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "ffmpeg:libohosffmpeg",
    "googletest:gmock",
    "graphic_surface:surface_static",
    "graphic_surface:sync_fence_static",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:libhitracechain",
    "init:libbegetutil",
    "ipc:ipc_single",
    "media_foundation:media_foundation",
    "media_foundation:native_media_core",
    "safwk:system_ability_fwk",
  ]

  if (av_codec_support_drm) {
    defines += [ "SUPPORT_DRM" ]
  }

  if (av_codec_support_drm) {
    external_deps += [ "drm_framework:drm_framework" ]
  }

  if (defined(av_codec_support_video_processing_engine) &&
      av_codec_support_video_processing_engine) {
    external_deps += [ "video_processing_engine:videoprocessingengine" ]
  }

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}
