# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "player_framework/player_framework/av_codec"

audio_sampleformat_unittest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fexceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Dprivate=public",
  "-Dprotected=public",
]

ohos_unittest("audio_sampleformat_unittest") {
  module_out_path = module_output_path
    
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "./audio_sampleformat_unitttest.cpp",
    "$av_codec_root_dir/services/media_engine/modules/sink/audio_sampleformat.cpp",
  ]

  include_dirs = [
    "./",
    "$av_codec_root_dir/services/media_engine/modules/sink",
  ]

  cflags = audio_sampleformat_unittest_cflags

  deps = [
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest",
    "googletest:gmock",
    "hilog:libhilog",
    "media_foundation:media_foundation",
  ]

}