# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "av_codec/AVCodec_Audio/unittest"

avmuxer_unittest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fno-exceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
]

#################################################################################################################muxer
ohos_unittest("avmuxer_capi_unit_test") {
  sanitize = av_codec_test_sanitize
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./capi",
  ]

  cflags = avmuxer_unittest_cflags

  if (av_codec_support_muxer) {
    sources = [
      "./avmuxer_sample.cpp",
      "./avmuxer_unit_test.cpp",
      "./avmuxer_wav_pcm_unit_test.cpp",
      "./capi/avmuxer_capi_mock.cpp",
      "./capi/avmuxer_capi_mock_factory.cpp",
    ]
  }

  if (target_cpu == "arm64" || is_emulator) {
    av_codec_path = "\"/system/lib64\""
  } else {
    av_codec_path = "\"/system/lib\""
  }
  defines = [
    "AVMUXER_UNITTEST_CAPI",
    "AV_CODEC_PATH=${av_codec_path}",
  ]

  public_deps =
      [ "$av_codec_root_dir/test/unittest/common:av_codec_capi_unit_test" ]

  deps = [ "$av_codec_root_dir/interfaces/kits/c:capi_packages" ]

  external_deps = [
    "av_codec:av_codec_client",
    "graphic_surface:surface",
  ]

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}

#################################################################################################################muxer
ohos_unittest("avmuxer_inner_unit_test") {
  sanitize = av_codec_test_sanitize
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./inner",
  ]

  cflags = avmuxer_unittest_cflags

  if (av_codec_support_muxer) {
    sources = [
      "./avmuxer_sample.cpp",
      "./avmuxer_unit_test.cpp",
      "./avmuxer_wav_pcm_unit_test.cpp",
      "./avmuxer_flac_unit_test.cpp",
      "./avmuxer_mp4_gltf_unit_test.cpp",
      "./inner/avmuxer_inner_mock.cpp",
      "./inner/avmuxer_inner_mock_factory.cpp",
    ]
  }

  if (target_cpu == "arm64" || is_emulator) {
    av_codec_path = "\"/system/lib64\""
  } else {
    av_codec_path = "\"/system/lib\""
  }
  defines = [
    "AVMUXER_UNITTEST_INNER_API",
    "AV_CODEC_PATH=${av_codec_path}",
  ]

  public_deps =
      [ "$av_codec_root_dir/test/unittest/common:av_codec_inner_unit_test" ]

  deps = [ "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase" ]

  external_deps = [
    "av_codec:av_codec_client",
    "graphic_surface:surface",
  ]

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}

#################################################################################################################
ohos_unittest("avmuxer_ogg_unit_test") {
  sanitize = av_codec_test_sanitize
  module_out_path = module_output_path
  include_dirs = [
    "./",
  ]

  cflags = avmuxer_unittest_cflags

  if (av_codec_support_muxer) {
    sources = [
      "./avmuxer_ogg_unit_test.cpp",
    ]
  }

  if (target_cpu == "arm64" || is_emulator) {
    av_codec_path = "\"/system/lib64\""
  } else {
    av_codec_path = "\"/system/lib\""
  }
  defines = [
    "AV_CODEC_PATH=${av_codec_path}",
  ]

  deps = [
    "$av_codec_root_dir/interfaces/kits/c:capi_packages",
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase",
  ]

  external_deps = [
    "media_foundation:native_media_core",
    "graphic_surface:surface",
  ]

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}


#################################################################################################################muxer
ohos_unittest("avmuxer_gltf_unit_test") {
  sanitize = av_codec_test_sanitize
  module_out_path = module_output_path
  defines = [
    "HST_ANY_WITH_NO_RTTI",
    "MEDIA_OHOS",
    "TESTING",
    "HST_ANY_WITH_NO_RTTI",
    "MEDIA_OHOS",
  ]

  cflags = [
    "-Wno-sign-compare",
    "-fno-exceptions",
    "-fno-common",
    "-fstack-protector-all",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wdate-time",
    "-Dprivate=public",
    "-Dprotected=public",
    "-Wno-unused-parameter",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]

  include_dirs = [
    "$av_codec_root_dir/interfaces",
    "$av_codec_root_dir/interfaces/inner_api",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/services/media_engine/modules",
  ]
  configs = [
    "$av_codec_root_dir/services/dfx:av_codec_service_log_dfx_public_config",
  ]
  sources = [
    "./avmuxer_mp4_gltf_unit_test.cpp",
  ]
  if (target_cpu == "arm64" || is_emulator) {
    av_codec_path = "\"/system/lib64\""
  } else {
    av_codec_path = "\"/system/lib\""
  }
  defines += [
    "AV_CODEC_PATH=${av_codec_path}",
  ]
  deps = [
    "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase",
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
    "$av_codec_root_dir/services/engine/base:av_codec_codec_base",
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/services/services:av_codec_service",
  ] 
  external_deps = [
    "c_utils:utils",
    "ffmpeg:libohosffmpeg",
    "graphic_surface:surface",
    "init:libbegetutil",
    "hicollie:libhicollie",
    "media_foundation:media_foundation",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "ipc:ipc_single",
  ]
  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}

################################################################################################################# mpeg4 muxer
ohos_unittest("avmuxer_mpeg4_plugin_unit_test") {
  sanitize = av_codec_test_sanitize
  module_out_path = module_output_path
  mpeg4_include_dirs = [
    "$av_codec_root_dir/interfaces",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter",
    "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer",
    "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/common",
  ]

  include_dirs = mpeg4_include_dirs + [
    "./",
    "./avmuxer_mpeg4_unittest",
    "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer",
    "$av_codec_root_dir/interfaces/plugin",
    "$av_codec_root_dir/services/media_engine/modules/muxer",
  ]

  cflags = avmuxer_unittest_cflags

  if (av_codec_support_muxer) {
    mpeg4_sources = [
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/audio_track.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/avc_parser.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/avio_stream.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/basic_box.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/basic_track.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/box_parser.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/cover_track.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/hevc_parser.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/mpeg4_muxer_plugin.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/mpeg4_utils.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/video_parser.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/video_track.cpp",
      "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/common/stream_parser_manager.cpp",
    ]

    sources = mpeg4_sources + [
      "./avmuxer_mpeg4_unittest/avmuxer_mpeg4_plugin_mock_factory.cpp",
      "./avmuxer_mpeg4_unittest/avmuxer_mpeg4_plugin_mock.cpp",
      "./avmuxer_mpeg4_unittest/avmuxer_mpeg4_unit_test.cpp",
      "avmuxer_sample.cpp",
    ]
  }

  if (target_cpu == "arm64" || is_emulator) {
    av_codec_path = "\"/system/lib64\""
  } else {
    av_codec_path = "\"/system/lib\""
  }

  defines = [
    "AVMUXER_UNITTEST_INNER_API",
    "AV_CODEC_PATH=${av_codec_path}",
  ]

  defines += av_codec_defines

  deps = [
    "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase",
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/test/unittest/common:av_codec_inner_unit_test",
    "$av_codec_root_dir/services/media_engine/modules:av_codec_media_engine_modules",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "graphic_surface:surface",
    "media_foundation:native_media_core",
  ]

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}
