# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "av_codec/AVCodec_Video/unittest"

calc_max_amplitude_unittest_include_dirs =
    [ "$av_codec_root_dir/interfaces/inner_api/native" ]

calc_max_amplitude_unittest_cflags = [
  "-O2",
  "-fPIC",
  "-Wall",
  "-fexceptions",
  "-fno-rtti",
  "-Wno-unused-but-set-variable",
  "-Wno-format",
  "-Dprivate=public",
  "-Dprotected=public",
  "-DMEDIA_OHOS=1",
]

##################################################################################################################
ohos_unittest("calc_max_amplitude_unittest") {
  module_out_path = module_output_path

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  
  include_dirs = calc_max_amplitude_unittest_include_dirs
  include_dirs += [
    "$av_codec_root_dir/interfaces",
    "$av_codec_root_dir/interfaces/plugin",
    "$av_codec_root_dir/services/media_engine/plugins/sink",
    "$av_codec_root_dir/services/media_engine/modules",
    "$av_codec_root_dir/services/media_engine/modules/sink",
    "$av_codec_root_dir/test/unittest/calc_max_amplitude_unittest",
  ]

  cflags = calc_max_amplitude_unittest_cflags

  cflags_cc = cflags

  public_configs = []

  sources = [
    "$av_codec_root_dir/services/media_engine/modules/sink/calc_max_amplitude.cpp",
    "./calc_max_amplitude_unittest.cpp",
  ]

  deps = [
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
    "$av_codec_root_dir/services/media_engine/modules:av_codec_media_engine_modules",
  ]

  external_deps = [
    "audio_framework:audio_client",
    "audio_framework:audio_foundation",
    "audio_framework:audio_renderer",
    "c_utils:utils",
    "ffmpeg:libohosffmpeg",
    "googletest:gmock_main",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "media_foundation:media_foundation",
    "safwk:system_ability_fwk",
  ]

}
