# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "av_codec/AVCodec_Video/unittest"
decoder_filter_test_sources = [
  "$av_codec_root_dir/services/drm_decryptor/codec_drm_decrypt.cpp",
  "$av_codec_root_dir/services/media_engine/filters/audio_decoder_filter.cpp",
  "$av_codec_root_dir/services/media_engine/filters/metadata_filter.cpp",
  "$av_codec_root_dir/services/media_engine/filters/surface_encoder_adapter.cpp",
  "$av_codec_root_dir/services/media_engine/filters/surface_encoder_filter.cpp",
  "$av_codec_root_dir/services/media_engine/filters/video_decoder_adapter.cpp",
  "$av_codec_root_dir/services/media_engine/filters/video_resize_filter.cpp",
  "$av_codec_root_dir/services/media_engine/modules/media_codec/media_codec.cpp",
]
config("decoder_filter_unittest_cfg") {
  defines = [
    "HST_ANY_WITH_NO_RTTI",
    "MEDIA_OHOS",
    "TESTING",
  ]

  if (av_codec_support_drm) {
    defines += [ "SUPPORT_DRM" ]
  }

  cflags = [
    "-Wno-sign-compare",
    "-fno-exceptions",
    "-fno-common",
    "-fstack-protector-all",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wdate-time",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]

  include_dirs = [
    "$av_codec_root_dir/interfaces",
    "$av_codec_root_dir/interfaces/inner_api",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/services/drm_decryptor",
    "$av_codec_root_dir/services/include",
    "$av_codec_root_dir/services/media_engine/filters",
    "$av_codec_root_dir/services/media_engine/modules",
    "$av_codec_root_dir/test/unittest/common",
  ]
}

#################################################################################################################
ohos_unittest("decoder_filter_unit_test") {
  sanitize = av_codec_test_sanitize
  module_out_path = module_output_path
  testonly = true
  configs = [
    ":decoder_filter_unittest_cfg",
    "$av_codec_root_dir/services/dfx:av_codec_service_log_dfx_public_config",
  ]
  sources = decoder_filter_test_sources + [
              "audio_decoder_filter_unit_test.cpp",
              "metadata_filter_unit_test.cpp",
              "surface_encoder_filter_unit_test.cpp",
              "video_decoder_adapter_unit_test.cpp",
              "video_resize_filter_unit_test.cpp",
            ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase",
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
    "$av_codec_root_dir/services/media_engine/modules:av_codec_media_engine_modules",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "googletest:gmock",
    "graphic_surface:surface_static",
    "graphic_surface:sync_fence_static",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "media_foundation:media_foundation",
    "netmanager_base:net_conn_manager_if",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "ffrt:libffrt",
    "av_codec:av_codec_media_engine_filters",
  ]

  if (av_codec_support_drm) {
    external_deps += [ "drm_framework:drm_framework" ]
  }

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}
